--- a/rust/tests/Cargo.toml
+++ b/rust/tests/Cargo.toml
@@ -4,3 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+geojson = { version = "0.24.0", features = ["geo-types"] }
+overline = { path = "../overline" }
