--- a/rust/cli/Cargo.toml
+++ b/rust/cli/Cargo.toml
@@ -8,3 +8,4 @@ anyhow = "1.0.70"
 geo = "0.24.1"
 geojson = { version = "0.24.0", features = ["geo-types"] }
 overline = { path = "../overline" }
+rayon = "1.7.0"
