--- a/rust/overline/Cargo.toml
+++ b/rust/overline/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2021"
 geo = "0.24.1"
 geojson = { version = "0.24.0", features = ["geo-types"] }
 ordered-float = "3.6.0"
+rayon = "1.7.0"
 serde = { version = "1.0.159", features = ["derive"] }
