--- a/rust/cli/Cargo.toml
+++ b/rust/cli/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.70"
+clap = "4.2.1"
 geo = "0.24.1"
 geojson = { version = "0.24.0", features = ["geo-types"] }
 overline = { path = "../overline" }
