--- a/rust/tests/Cargo.toml
+++ b/rust/tests/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 geojson = { version = "0.24.0", features = ["geo-types"] }
 overline = { path = "../overline" }
+serde_json = { version = "1.0.96", features = ["float_roundtrip"] }
